--- a/index.css
+++ b/index.css
@@ -5,24 +5,40 @@ body {
 #main {
     height: 100%;
     width: 100%;
-}
-
-#arrows {
-    background-color: #f00;
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .arrow-left, .arrow-right {
-    width: 25%;
+    width: 10vh;
+    background-color: var(--bs-pink);
+}
+
+#sammy-head {
+    height: 99px;
+}
+
+#sammy-body {
+    height: 176px;
+}
+
+#sammy-legs {
+    height: 225px;
+}
+
+.body-part {
+    background-color: #f00;
+}
+
+.arrow-left img, .arrow-right img {
+    width: 100%;
     height: 100%;
     float: left;
-}
-
-.arrow-img {
     background-color: rgb(0, 132, 255);
-    border-radius: 15%;
+    border-radius: 20%;
 }
 
-.arrow-img:hover {
+.arrow-left img:active, .arrow-right img:active {
     background-color: rgb(0, 96, 185);
 }
