--- a/index.css
+++ b/index.css
@@ -31,6 +31,10 @@ body {
     background-color: #f00;
 }
 
+.arrow-forw, .arrow-prev {
+    -webkit-tap-highlight-color: transparent;
+}
+
 .arrow-left img, .arrow-right img {
     width: 100%;
     height: 100%;
