--- a/index.css
+++ b/index.css
@@ -10,11 +10,13 @@ body {
     align-items: center;
 }
 
-.arrow-left, .arrow-right {
-    width: 10vh;
-    background-color: var(--bs-pink);
+#arrow-left,
+#arrow-right {
+    width: 9.5vh;
+    /* background-color: #00f; */
 }
 
+/*
 #sammy-head {
     height: 99px;
 }
@@ -26,32 +28,43 @@ body {
 #sammy-legs {
     height: 225px;
 }
+*/
 
 .body-part {
-    background-color: #f00;
+    /* background-color: #f00; */
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
-.arrow-forw, .arrow-prev {
-  -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Old versions of Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+#arrow-left,
+#arrow-right {
+    display: grid;
 }
 
-.body-part::selection {
-    background: transparent;
-}
-
-.arrow-left img, .arrow-right img {
+#arrow-left img,
+#arrow-right img {
     width: 100%;
     height: 100%;
-    float: left;
     background-color: rgb(0, 132, 255);
     border-radius: 20%;
 }
 
-.arrow-left img:active, .arrow-right img:active {
+#arrow-left img:active,
+#arrow-right img:active {
     background-color: rgb(0, 96, 185);
+}
+
+.arrow-forw,
+.arrow-prev {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+
+.hide-highlight {
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Old versions of Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 }
