--- a/index.css
+++ b/index.css
@@ -16,11 +16,11 @@ body {
     /* background-color: #00f; */
 }
 
-/*
+
 #sammy-head {
     height: 99px;
 }
-
+/*
 #sammy-body {
     height: 176px;
 }
@@ -67,4 +67,8 @@ body {
          -moz-user-select: none; /* Old versions of Firefox */
           -ms-user-select: none; /* Internet Explorer/Edge */
               user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+}
+
+label {
+    color: #fff;
 }
