--- a/index.css
+++ b/index.css
@@ -34,6 +34,8 @@ body {
     /* background-color: #f00; */
     padding-left: 1rem;
     padding-right: 1rem;
+    display: block;
+    margin: 0 auto;
 }
 
 #arrow-left,
@@ -69,6 +71,6 @@ body {
               user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 }
 
-label {
+input[type=file], label {
     color: #fff;
 }
