--- a/index.css
+++ b/index.css
@@ -1,5 +1,11 @@
 body {
     background-color: var(--bs-dark);
+    color: #fff;
+}
+
+.light-mode {
+    background-color: var(--bs-light);
+    color: #000;
 }
 
 #main, #bottom {
@@ -8,6 +14,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#top {
+    display: inline-flex;
+    background-color: #f00;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
 #bottom {
@@ -51,7 +65,8 @@ body {
 }
 
 #arrow-left img,
-#arrow-right img {
+#arrow-right img,
+#colour-toggle img {
     width: 100%;
     height: 100%;
     background-color: rgb(0, 132, 255);
@@ -60,7 +75,8 @@ body {
 
 #arrow-left img:active,
 #arrow-right img:active,
-#randomize:active {
+#randomize:active,
+#colour-toggle img:active {
     background-color: rgb(0, 96, 185);
 }
 
@@ -79,10 +95,6 @@ body {
               user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 }
 
-input[type=file], label {
-    color: #fff;
-}
-
 #randomize {
     background-color: rgb(0, 132, 255);
     border-radius: 10%;
@@ -92,10 +104,19 @@ input[type=file], label {
     margin: 0 auto;
 }
 
-h1 {
-    color: #fff;
+#title {
     text-align: center;
     padding-top: 2rem;
     font-size: 48px;
     font-family: 'Fredoka One', sans-serif;
+    border: 5px solid #0f0;
+}
+
+#colour-toggle {
+    padding-left: 5rem;
+    height: 10rem;
+}
+
+#colour-toggle-inner {
+    border: 5px solid #FFFF00;
 }
