--- a/css/dino.css
+++ b/css/dino.css
@@ -25,7 +25,7 @@ body {
     top: 1vmin;
 }
 
-.start-screen {
+#start-screen {
     position: absolute;
     font-size: 5vmin;
     top: 50%;
@@ -45,7 +45,7 @@ body {
     left: calc(var(--left) * 1%)
 }
 
-.dino {
+#dino {
     --bottom: 0;
     position: absolute;
     left: 1%;
