update cactus, add cart

--- a/css/global.css
+++ b/css/global.css
@@ -19,29 +19,9 @@ body {
 	font-weight: 700;
 	text-decoration: none;
 	color: #664;
+	padding-right: 15px;
 }
 
-#header a:hover {
-	color: #d60;
-}
-
-#header>div {
-	width: 980px;
-	margin: 0 auto;
-	padding: 0;
-    display: inline-block;
-	vertical-align: middle;
-	margin: 5px
-}
-
-#header>div>div>p {
-	margin: 0;
-}
-
-#header>div>div>p>a:nth-child(2) {
-	margin-right: 0;
-}
-
-#homeImg {
+#header>a>img {
     height: 100%;
 }
