--- a/css/dino.css
+++ b/css/dino.css
@@ -58,3 +58,15 @@ body {
     height: 30%;
     bottom: 0;
 }
+
+#shop {
+    position: fixed;
+    background-color: #fff;
+    border: 3px solid #000;
+    width: 60%;
+    height: 70%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 5%;
+}
