--- a/css/dino.css
+++ b/css/dino.css
@@ -10,6 +10,10 @@ body {
     min-height: 100vh;
 }
 
+.hide {
+    display: none !important;
+}
+
 #world {
     overflow: hidden;
     position: relative;
@@ -30,10 +34,6 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-}
-
-.hide {
-    display: none;
 }
 
 .ground {
@@ -63,10 +63,36 @@ body {
     position: fixed;
     background-color: #fff;
     border: 3px solid #000;
-    width: 60%;
-    height: 70%;
+    width: 75%;
+    height: 75%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 5%;
+    align-items: center;
+    justify-content: center;
+    grid-gap: 2px;
+    grid-auto-columns: max-content;
+    grid-template-columns: repeat(4, 1fr);
+    overflow: auto;
+}
+
+.shopCharacter {
+    border: 2px solid #000;
+    border-radius: 10%;
+    text-align: center;
+    justify-content: center;
+}
+
+.shop-req {
+    font-family: 'Kdam Thmor Pro', sans-serif;
+}
+
+.shop-img {
+    width: 10vmax;
+}
+
+.btn-equip {
+    min-width: 65%;
+    text-align: center;
 }
